--- a/demo/demo.tex
+++ b/demo/demo.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt]{beamer}
 
-\usetheme{metropolis}
+\usetheme{lantian}
 \usepackage{appendixnumberbeamer}
 
 \usepackage{booktabs}
@@ -12,10 +12,10 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-\title{Metropolis}
+\title{lantian}
 \subtitle{A modern beamer theme}
 \date{\today}
-\author{Matthias Vogelgesang}
+\author{Stefan Endres}
 \institute{Center for modern beamer themes}
 % \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
 
