--- a/source/beamerouterthemelantian.dtx
+++ b/source/beamerouterthemelantian.dtx
@@ -12,7 +12,7 @@
 % \iffalse
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerouterthememetropolis}[2017/01/23 Metropolis outer theme]
+\ProvidesPackage{beamerouterthemelantian}[2017/01/23 Metropolis outer theme]
 %</package>
 % \fi
 % \CheckSum{0}
@@ -44,7 +44,7 @@
 %    Adds slide numbers to the bottom right of each slide.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/outer/numbering/.cd,
+  /lantian/outer/numbering/.cd,
     .is choice,
     none/.code=\setbeamertemplate{frame numbering}[none],
     counter/.code=\setbeamertemplate{frame numbering}[counter],
@@ -57,24 +57,24 @@
 %    Adds a progress bar to the top, bottom, or frametitle of each slide.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/outer/progressbar/.cd,
+  /lantian/outer/progressbar/.cd,
     .is choice,
     none/.code={%
       \setbeamertemplate{headline}[plain]
       \setbeamertemplate{frametitle}[plain]
       \setbeamertemplate{footline}[plain]
     },
-    head/.code={\pgfkeys{/metropolis/outer/progressbar=none}
+    head/.code={\pgfkeys{/lantian/outer/progressbar=none}
       \addtobeamertemplate{headline}{}{%
         \usebeamertemplate*{progress bar in head/foot}
       }
     },
-    frametitle/.code={\pgfkeys{/metropolis/outer/progressbar=none}
+    frametitle/.code={\pgfkeys{/lantian/outer/progressbar=none}
       \addtobeamertemplate{frametitle}{}{%
         \usebeamertemplate*{progress bar in head/foot}
       }
     },
-    foot/.code={\pgfkeys{/metropolis/outer/progressbar=none}
+    foot/.code={\pgfkeys{/lantian/outer/progressbar=none}
       \addtobeamertemplate{footline}{}{%
         \usebeamertemplate*{progress bar in head/foot}%
       }
@@ -83,11 +83,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\metropolis@outer@setdefaults}
+% \begin{macro}{\lantian@outer@setdefaults}
 %    Sets default values for outer theme options.
 %    \begin{macrocode}
-\newcommand{\metropolis@outer@setdefaults}{
-  \pgfkeys{/metropolis/outer/.cd,
+\newcommand{\lantian@outer@setdefaults}{
+  \pgfkeys{/lantian/outer/.cd,
     numbering=counter,
     progressbar=none,
   }
@@ -148,30 +148,30 @@
 %    Templates for the frame title, which is optionally underlined with a
 %    progress bar.
 %    \begin{macrocode}
-\newlength{\metropolis@frametitle@padding}
-\setlength{\metropolis@frametitle@padding}{2.2ex}
-\newcommand{\metropolis@frametitlestrut@start}{
-  \rule{0pt}{\metropolis@frametitle@padding +%
+\newlength{\lantian@frametitle@padding}
+\setlength{\lantian@frametitle@padding}{2.2ex}
+\newcommand{\lantian@frametitlestrut@start}{
+  \rule{0pt}{\lantian@frametitle@padding +%
     \totalheightof{%
-      \ifcsdef{metropolis@frametitleformat}{\metropolis@frametitleformat X}{X}%
+      \ifcsdef{lantian@frametitleformat}{\lantian@frametitleformat X}{X}%
     }%
   }%
 }
-\newcommand{\metropolis@frametitlestrut@end}{
-  \rule[-\metropolis@frametitle@padding]{0pt}{\metropolis@frametitle@padding}
+\newcommand{\lantian@frametitlestrut@end}{
+  \rule[-\lantian@frametitle@padding]{0pt}{\lantian@frametitle@padding}
 }
 \defbeamertemplate{frametitle}{plain}{%
   \nointerlineskip%
   \begin{beamercolorbox}[%
       wd=\paperwidth,%
       sep=0pt,%
-      leftskip=\metropolis@frametitle@padding,%
-      rightskip=\metropolis@frametitle@padding,%
+      leftskip=\lantian@frametitle@padding,%
+      rightskip=\lantian@frametitle@padding,%
     ]{frametitle}%
-  \metropolis@frametitlestrut@start%
+  \lantian@frametitlestrut@start%
   \insertframetitle%
   \nolinebreak%
-  \metropolis@frametitlestrut@end%
+  \lantian@frametitlestrut@end%
   \end{beamercolorbox}%
 }
 \setbeamertemplate{frametitle continuation}{%
@@ -186,19 +186,19 @@
 %    on each page. Much of this code is duplicated in the inner theme's
 %    template |progress bar in section page|.
 %    \begin{macrocode}
-\newlength{\metropolis@progressinheadfoot}
-\newlength{\metropolis@progressinheadfoot@linewidth}
-\setlength{\metropolis@progressinheadfoot@linewidth}{0.4pt}
+\newlength{\lantian@progressinheadfoot}
+\newlength{\lantian@progressinheadfoot@linewidth}
+\setlength{\lantian@progressinheadfoot@linewidth}{0.4pt}
 \setbeamertemplate{progress bar in head/foot}{
   \nointerlineskip
-  \setlength{\metropolis@progressinheadfoot}{%
+  \setlength{\lantian@progressinheadfoot}{%
     \paperwidth * \ratio{\insertframenumber pt}{\inserttotalframenumber pt}%
   }%
   \begin{beamercolorbox}[wd=\paperwidth]{progress bar in head/foot}
     \tikzexternaldisable%
     \begin{tikzpicture}
-      \fill[bg] (0,0) rectangle (\paperwidth, \metropolis@progressinheadfoot@linewidth);
-      \fill[fg] (0,0) rectangle (\metropolis@progressinheadfoot, \metropolis@progressinheadfoot@linewidth);
+      \fill[bg] (0,0) rectangle (\paperwidth, \lantian@progressinheadfoot@linewidth);
+      \fill[fg] (0,0) rectangle (\lantian@progressinheadfoot, \lantian@progressinheadfoot@linewidth);
     \end{tikzpicture}%
     \tikzexternalenable%
   \end{beamercolorbox}
@@ -217,7 +217,7 @@
 \AtBeginDocument{%
   \apptocmd{\appendix}{%
     \pgfkeys{%
-      /metropolis/outer/.cd,
+      /lantian/outer/.cd,
       numbering=none,
       progressbar=none}
     }{}{}
@@ -227,8 +227,8 @@
 % \subsubsection{Process package options}
 %
 %    \begin{macrocode}
-\metropolis@outer@setdefaults
-\ProcessPgfPackageOptions{/metropolis/outer}
+\lantian@outer@setdefaults
+\ProcessPgfPackageOptions{/lantian/outer}
 %    \end{macrocode}
 %
 % \iffalse
