--- a/source/beamerinnerthemelantian.dtx
+++ b/source/beamerinnerthemelantian.dtx
@@ -12,7 +12,7 @@
 % \iffalse
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerinnerthememetropolis}[2017/01/23 Metropolis inner theme]
+\ProvidesPackage{beamerinnerthemelantian}[2017/01/23 Metropolis inner theme]
 %</package>
 % \fi
 % \CheckSum{0}
@@ -54,12 +54,12 @@
 %    Optionally add a slide marking the beginning of each section.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/inner/sectionpage/.cd,
+  /lantian/inner/sectionpage/.cd,
     .is choice,
-    none/.code=\metropolis@disablesectionpage,
-    simple/.code={\metropolis@enablesectionpage
+    none/.code=\lantian@disablesectionpage,
+    simple/.code={\lantian@enablesectionpage
                   \setbeamertemplate{section page}[simple]},
-    progressbar/.code={\metropolis@enablesectionpage
+    progressbar/.code={\lantian@enablesectionpage
                        \setbeamertemplate{section page}[progressbar]},
 }
 %    \end{macrocode}
@@ -69,22 +69,22 @@
 %    Optionally add a slide marking the beginning of each subsection.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/inner/subsectionpage/.cd,
+  /lantian/inner/subsectionpage/.cd,
     .is choice,
-    none/.code=\metropolis@disablesubsectionpage,
-    simple/.code={\metropolis@enablesubsectionpage
+    none/.code=\lantian@disablesubsectionpage,
+    simple/.code={\lantian@enablesubsectionpage
                   \setbeamertemplate{section page}[simple]},
-    progressbar/.code={\metropolis@enablesubsectionpage
+    progressbar/.code={\lantian@enablesubsectionpage
                        \setbeamertemplate{section page}[progressbar]},
 }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\metropolis@inner@setdefaults}
+% \begin{macro}{\lantian@inner@setdefaults}
 % Set default values for inner theme options.
 %    \begin{macrocode}
-\newcommand{\metropolis@inner@setdefaults}{
-  \pgfkeys{/metropolis/inner/.cd,
+\newcommand{\lantian@inner@setdefaults}{
+  \pgfkeys{/lantian/inner/.cd,
     sectionpage=progressbar,
     subsectionpage=none
   }
@@ -196,12 +196,12 @@
 %   Template to set the title graphic in a zero-height box. (It won't
 %   change the position of other elements.)
 %    \begin{macrocode}
-\newlength{\metropolis@titleseparator@linewidth}
-\setlength{\metropolis@titleseparator@linewidth}{0.4pt}
+\newlength{\lantian@titleseparator@linewidth}
+\setlength{\lantian@titleseparator@linewidth}{0.4pt}
 \setbeamertemplate{title separator}{
   \tikzexternaldisable%
   \begin{tikzpicture}
-    \fill[fg] (0,0) rectangle (\textwidth, \metropolis@titleseparator@linewidth);
+    \fill[fg] (0,0) rectangle (\textwidth, \lantian@titleseparator@linewidth);
   \end{tikzpicture}%
   \tikzexternalenable%
   \par%
@@ -281,12 +281,12 @@
   \par
   \vspace{\baselineskip}
 }
-\newcommand{\metropolis@disablesectionpage}{
+\newcommand{\lantian@disablesectionpage}{
   \AtBeginSection{
     % intentionally empty
   }
 }
-\newcommand{\metropolis@enablesectionpage}{
+\newcommand{\lantian@enablesectionpage}{
   \AtBeginSection{
     \ifbeamer@inframe
       \sectionpage
@@ -307,12 +307,12 @@
 \setbeamertemplate{subsection page}{%
   \usebeamertemplate*{section page}
 }
-\newcommand{\metropolis@disablesubsectionpage}{
+\newcommand{\lantian@disablesubsectionpage}{
   \AtBeginSubsection{
     % intentionally empty
   }
 }
-\newcommand{\metropolis@enablesubsectionpage}{
+\newcommand{\lantian@enablesubsectionpage}{
   \AtBeginSubsection{
     \ifbeamer@inframe
       \subsectionpage
@@ -331,17 +331,17 @@
 %   |progress bar in head/foot|.
 %
 %    \begin{macrocode}
-\newlength{\metropolis@progressonsectionpage}
-\newlength{\metropolis@progressonsectionpage@linewidth}
-\setlength{\metropolis@progressonsectionpage@linewidth}{0.4pt}
+\newlength{\lantian@progressonsectionpage}
+\newlength{\lantian@progressonsectionpage@linewidth}
+\setlength{\lantian@progressonsectionpage@linewidth}{0.4pt}
 \setbeamertemplate{progress bar in section page}{
-  \setlength{\metropolis@progressonsectionpage}{%
+  \setlength{\lantian@progressonsectionpage}{%
     \textwidth * \ratio{\insertframenumber pt}{\inserttotalframenumber pt}%
   }%
   \tikzexternaldisable%
   \begin{tikzpicture}
-    \fill[bg] (0,0) rectangle (\textwidth, \metropolis@progressonsectionpage@linewidth);
-    \fill[fg] (0,0) rectangle (\metropolis@progressonsectionpage, \metropolis@progressonsectionpage@linewidth);
+    \fill[bg] (0,0) rectangle (\textwidth, \lantian@progressonsectionpage@linewidth);
+    \fill[fg] (0,0) rectangle (\lantian@progressonsectionpage, \lantian@progressonsectionpage@linewidth);
   \end{tikzpicture}%
   \tikzexternalenable%
 }
@@ -351,7 +351,7 @@
 %   |\inserttotalframenumber|. However, this is not true on the first compile;
 %   in the absence of an |.aux| file, |\inserttotalframenumber| defaults to 1.
 %   This behaviour could cause fatal errors for long presentations, as
-%   |\metropolis@progressonsectionpage| would exceed \TeX's maximum length
+%   |\lantian@progressonsectionpage| would exceed \TeX's maximum length
 %   (16383.99999pt, roughly 5.75 metres or 18.9 feet).
 %   To avoid this, we increase the default value for |\inserttotalframenumber|;
 %   presentations with over 4000 slides will still break on first compile, but
@@ -373,17 +373,17 @@
 %
 %    The three different block environments differ only in their colours.
 %    Rather than repeat the essentially the same template three times, we use
-%    the auxiliary macro |\metropolis@block| to define all three templates.
+%    the auxiliary macro |\lantian@block| to define all three templates.
 %
 %    \begin{macrocode}
-\newlength{\metropolis@blocksep}
-\newlength{\metropolis@blockadjust}
-\setlength{\metropolis@blocksep}{0.75ex}
-\setlength{\metropolis@blockadjust}{0.25ex}
-\providecommand{\metropolis@strut}{%
+\newlength{\lantian@blocksep}
+\newlength{\lantian@blockadjust}
+\setlength{\lantian@blocksep}{0.75ex}
+\setlength{\lantian@blockadjust}{0.25ex}
+\providecommand{\lantian@strut}{%
   \vphantom{ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz()}%
 }
-\newcommand{\metropolis@block}[1]{
+\newcommand{\lantian@block}[1]{
   \par\vskip\medskipamount%
   \setlength{\parskip}{0pt}
 %    \end{macrocode}
@@ -414,30 +414,30 @@
 %   \end{macrocode}
 %
 %   Otherwise, if the |block title| has a background, we set the padding based
-%   on |\metropolis@blockskip|. However, we have to visually compensate for
-%   the |\metropolis@strut| added to the block title (see below) by
-%   subtracting |\metropolis@blockadjust| from the top and bottom padding.
+%   on |\lantian@blockskip|. However, we have to visually compensate for
+%   the |\lantian@strut| added to the block title (see below) by
+%   subtracting |\lantian@blockadjust| from the top and bottom padding.
 %
 %   \begin{macrocode}
   {%
     \begin{beamercolorbox}[
-      sep=\dimexpr\metropolis@blocksep-\metropolis@blockadjust\relax,
-      leftskip=\metropolis@blockadjust,
-      rightskip=\dimexpr\metropolis@blockadjust plus 4em\relax
+      sep=\dimexpr\lantian@blocksep-\lantian@blockadjust\relax,
+      leftskip=\lantian@blockadjust,
+      rightskip=\dimexpr\lantian@blockadjust plus 4em\relax
     ]{block title#1}%
   }}%
 %   \end{macrocode}
 %
 %   We can now set the contents of the |block title|. The zero-width but
-%   positive-height box |\metropolis@strut| ensures that the block title box
+%   positive-height box |\lantian@strut| ensures that the block title box
 %   has a consistent height, even if it lacks punctuation, ascenders, or
 %   descenders.
 %
 %   \begin{macrocode}
       \usebeamerfont*{block title#1}%
-      \metropolis@strut%
+      \lantian@strut%
       \insertblocktitle%
-      \metropolis@strut%
+      \lantian@strut%
   \end{beamercolorbox}%
 %   \end{macrocode}
 %
@@ -451,21 +451,21 @@
   \ifbeamercolorempty[bg]{block body}{%
     \begin{beamercolorbox}[vmode]{block body#1}%
   }{%
-    \begin{beamercolorbox}[sep=\metropolis@blocksep, vmode]{block body#1}%
-    \vspace{-\metropolis@parskip}
+    \begin{beamercolorbox}[sep=\lantian@blocksep, vmode]{block body#1}%
+    \vspace{-\lantian@parskip}
   }}%
       \usebeamerfont{block body#1}%
-      \setlength{\parskip}{\metropolis@parskip}%
+      \setlength{\parskip}{\lantian@parskip}%
 }
 %    \end{macrocode}
 %
-%    This concludes the auxiliary macro |\metropolis@block|. Finally,
+%    This concludes the auxiliary macro |\lantian@block|. Finally,
 %    we define the block beamer templates using this macro.
 %
 %    \begin{macrocode}
-\setbeamertemplate{block begin}{\metropolis@block{}}
-\setbeamertemplate{block alerted begin}{\metropolis@block{ alerted}}
-\setbeamertemplate{block example begin}{\metropolis@block{ example}}
+\setbeamertemplate{block begin}{\lantian@block{}}
+\setbeamertemplate{block alerted begin}{\lantian@block{ alerted}}
+\setbeamertemplate{block example begin}{\lantian@block{ example}}
 \setbeamertemplate{block end}{\end{beamercolorbox}\vspace*{0.2ex}}
 \setbeamertemplate{block alerted end}{\end{beamercolorbox}\vspace*{0.2ex}}
 \setbeamertemplate{block example end}{\end{beamercolorbox}\vspace*{0.2ex}}
@@ -500,9 +500,9 @@
 % \subsubsection{Text and spacing settings}
 %
 %    \begin{macrocode}
-\newlength{\metropolis@parskip}
-\setlength{\metropolis@parskip}{0.5em}
-\setlength{\parskip}{\metropolis@parskip}
+\newlength{\lantian@parskip}
+\setlength{\lantian@parskip}{0.5em}
+\setlength{\parskip}{\lantian@parskip}
 \linespread{1.15}
 %    \end{macrocode}
 %
@@ -539,9 +539,9 @@
 %     change the colors and fonts, and set a \centering alignment.
 %
 %    \begin{macrocode}
-\providebool{metropolis@standout}
+\providebool{lantian@standout}
 \define@key{beamerframe}{standout}[true]{%
-  \booltrue{metropolis@standout}
+  \booltrue{lantian@standout}
   \begingroup
     \setkeys{beamerframe}{c}
     \setkeys{beamerframe}{noframenumbering}
@@ -574,9 +574,9 @@
 %
 %    \begin{macrocode}
   \apptocmd{\beamer@reseteecodes}{%
-    \ifbool{metropolis@standout}{
+    \ifbool{lantian@standout}{
       \endgroup
-      \boolfalse{metropolis@standout}
+      \boolfalse{lantian@standout}
     }{}
   }{}{}
 %    \end{macrocode}
@@ -585,8 +585,8 @@
 % \subsubsection{Process package options}
 %
 %    \begin{macrocode}
-\metropolis@inner@setdefaults
-\ProcessPgfPackageOptions{/metropolis/inner}
+\lantian@inner@setdefaults
+\ProcessPgfPackageOptions{/lantian/inner}
 %    \end{macrocode}
 %
 % \iffalse
