--- a/source/beamerthemelantian.dtx
+++ b/source/beamerthemelantian.dtx
@@ -12,7 +12,7 @@
 % \iffalse
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerthememetropolis}
+\ProvidesPackage{beamerthemelantian}
   [2017/01/23 v1.2 Metropolis Beamer theme]
 %</package>
 % \fi
@@ -44,12 +44,12 @@
 % Most options are passed off to the component sub-packages.
 %
 %    \begin{macrocode}
-\pgfkeys{/metropolis/.cd,
+\pgfkeys{/lantian/.cd,
   .search also={
-    /metropolis/inner,
-    /metropolis/outer,
-    /metropolis/color,
-    /metropolis/font,
+    /lantian/inner,
+    /lantian/outer,
+    /lantian/color,
+    /lantian/font,
   }
 }
 %    \end{macrocode}
@@ -58,27 +58,27 @@
 %    Controls the formatting of the text on standout ``plain'' frames.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/titleformat plain/.cd,
+  /lantian/titleformat plain/.cd,
     .is choice,
     regular/.code={%
-      \let\metropolis@plaintitleformat\@empty%
+      \let\lantian@plaintitleformat\@empty%
       \setbeamerfont{standout}{shape=\normalfont}%
     },
     smallcaps/.code={%
-      \let\metropolis@plaintitleformat\@empty%
+      \let\lantian@plaintitleformat\@empty%
       \setbeamerfont{standout}{shape=\scshape}%
     },
     allsmallcaps/.code={%
-      \let\metropolis@plaintitleformat\MakeLowercase%
+      \let\lantian@plaintitleformat\MakeLowercase%
       \setbeamerfont{standout}{shape=\scshape}%
-      \PackageWarning{beamerthememetropolis}{%
+      \PackageWarning{beamerthemelantian}{%
         Be aware that titleformat plain=allsmallcaps can lead to problems%
       }
     },
     allcaps/.code={%
-      \let\metropolis@plaintitleformat\MakeUppercase%
+      \let\lantian@plaintitleformat\MakeUppercase%
       \setbeamerfont{standout}{shape=\normalfont}%
-      \PackageWarning{beamerthememetropolis}{%
+      \PackageWarning{beamerthemelantian}{%
         Be aware that titleformat plain=allcaps can lead to problems%
       }
     },
@@ -91,7 +91,7 @@
 %    titles, and the text on standout ``plain'' frames.
 %    \begin{macrocode}
 \pgfkeys{
-  /metropolis/titleformat/.code=\pgfkeysalso{
+  /lantian/titleformat/.code=\pgfkeysalso{
       font/titleformat title=#1,
       font/titleformat subtitle=#1,
       font/titleformat section=#1,
@@ -106,7 +106,7 @@
 % deprecated option names as aliases to the corresponding |key=value| options.
 %
 %    \begin{macrocode}
-\pgfkeys{/metropolis/.cd,
+\pgfkeys{/lantian/.cd,
   usetitleprogressbar/.code=\pgfkeysalso{outer/progressbar=frametitle},
   noslidenumbers/.code=\pgfkeysalso{outer/numbering=none},
   usetotalslideindicator/.code=\pgfkeysalso{outer/numbering=fraction},
@@ -119,8 +119,8 @@
 % Set default values for options.
 %
 %    \begin{macrocode}
-\newcommand{\metropolis@setdefaults}{
-  \pgfkeys{/metropolis/.cd,
+\newcommand{\lantian@setdefaults}{
+  \pgfkeys{/lantian/.cd,
     titleformat plain=regular,
   }
 }
@@ -142,10 +142,10 @@
 % the theme.
 %
 %    \begin{macrocode}
-\useinnertheme{metropolis}
-\useoutertheme{metropolis}
-\usecolortheme{metropolis}
-\usefonttheme{metropolis}
+\useinnertheme{lantian}
+\useoutertheme{lantian}
+\usecolortheme{lantian}
+\usefonttheme{lantian}
 %    \end{macrocode}
 %
 % The |tol| theme for |pgfplots| is only loaded if |pgfplots| is used.
@@ -168,7 +168,7 @@
 % \begin{macro}{\metroset}
 %    Allows the user to change options midway through a presentation.
 %    \begin{macrocode}
-\newcommand{\metroset}[1]{\pgfkeys{/metropolis/.cd,#1}}
+\newcommand{\metroset}[1]{\pgfkeys{/lantian/.cd,#1}}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -177,14 +177,14 @@
 %   or a few words. The format of the text can be set with the
 %   |titleformat plain| option.
 %    \begin{macrocode}
-\def\metropolis@plaintitleformat#1{#1}
+\def\lantian@plaintitleformat#1{#1}
 \newcommand{\plain}[2][]{%
-  \PackageWarning{beamerthememetropolis}{%
+  \PackageWarning{beamerthemelantian}{%
     The syntax `\plain' may be deprecated in a future version of Metropolis.
     Please use a frame with [standout] instead.
   }
   \begin{frame}[standout]{#1}
-    \metropolis@plaintitleformat{#2}
+    \lantian@plaintitleformat{#2}
   \end{frame}
 }
 %    \end{macrocode}
@@ -201,8 +201,8 @@
 % \subsubsection{Process package options}
 %
 %    \begin{macrocode}
-\metropolis@setdefaults
-\ProcessPgfOptions{/metropolis}
+\lantian@setdefaults
+\ProcessPgfOptions{/lantian}
 %    \end{macrocode}
 %
 % \iffalse
